docs/2.0.1/_sources/api/gammapy.modeling.models.ConstantSpatialModel.rst.txt
ConstantSpatialModel
====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ConstantSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ConstantSpatialModel.covariance
      ~ConstantSpatialModel.default_parameters
      ~ConstantSpatialModel.evaluation_bin_size_min
      ~ConstantSpatialModel.evaluation_radius
      ~ConstantSpatialModel.evaluation_region
      ~ConstantSpatialModel.frame
      ~ConstantSpatialModel.frozen
      ~ConstantSpatialModel.is_energy_dependent
      ~ConstantSpatialModel.parameters
      ~ConstantSpatialModel.parameters_unique_names
      ~ConstantSpatialModel.phi_0
      ~ConstantSpatialModel.position
      ~ConstantSpatialModel.position_error
      ~ConstantSpatialModel.position_lonlat
      ~ConstantSpatialModel.tag
      ~ConstantSpatialModel.type
      ~ConstantSpatialModel.value

   .. rubric:: Methods Summary

   .. autosummary::

      ~ConstantSpatialModel.__call__
      ~ConstantSpatialModel.copy
      ~ConstantSpatialModel.evaluate
      ~ConstantSpatialModel.evaluate_geom
      ~ConstantSpatialModel.freeze
      ~ConstantSpatialModel.from_dict
      ~ConstantSpatialModel.from_parameters
      ~ConstantSpatialModel.from_position
      ~ConstantSpatialModel.integrate_geom
      ~ConstantSpatialModel.plot
      ~ConstantSpatialModel.plot_error
      ~ConstantSpatialModel.plot_grid
      ~ConstantSpatialModel.plot_interactive
      ~ConstantSpatialModel.plot_position_error
      ~ConstantSpatialModel.reassign
      ~ConstantSpatialModel.to_dict
      ~ConstantSpatialModel.to_region
      ~ConstantSpatialModel.unfreeze

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: evaluation_bin_size_min
   .. autoattribute:: evaluation_radius
   .. autoattribute:: evaluation_region
   .. autoattribute:: frame
   .. autoattribute:: frozen
   .. autoattribute:: is_energy_dependent
   .. autoattribute:: parameters
   .. autoattribute:: parameters_unique_names
   .. autoattribute:: phi_0
   .. autoattribute:: position
   .. autoattribute:: position_error
   .. autoattribute:: position_lonlat
   .. autoattribute:: tag
   .. autoattribute:: type
   .. autoattribute:: value

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: from_position
   .. automethod:: integrate_geom
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: plot_grid
   .. automethod:: plot_interactive
   .. automethod:: plot_position_error
   .. automethod:: reassign
   .. automethod:: to_dict
   .. automethod:: to_region
   .. automethod:: unfreeze
